gitops/espresso/infrastructure/configs/grafana/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: monitoring
spec:
  addresses:
    - type: IPAddress
      value: 10.0.188.3
    - type: IPAddress
      value: fd7a:115c:a1e0:188::3
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
