gitops/espresso/infrastructure/configs/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - grafana.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
